--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
-@font-face {
+/* @font-face {
     font-family: "DM Sans";
     src: url('../fonts/DMSans-Regular-webfont.ttf') format("ttf");
-}
+} */
 
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
 
 /* @font-face {
     font-family: "Silka";
@@ -45,10 +46,6 @@ p {
     display: none;
 }
 
-.sidebar {
-    width: 11rem!important;
-}
-
 
 /* Active Customers */
 
@@ -79,7 +76,7 @@ div.nav-link {
     cursor: pointer;
     background-color: #ffffff;
     position: absolute;
-    top: 56%;
+    top: 62%;
     left: 2%;
 }
 
@@ -1083,7 +1080,7 @@ div.nav-link {
 .live-chat-profile-area .second-ele b {
     font-size: 12px;
     color: #4D4D4D;
-    font-weight: normal;
+    font-weight: 500;
 }
 
 .live-chat-profile-area .first-ele h6 {
@@ -2744,3 +2741,565 @@ div.nav-link {
         margin: 10% 0 5% 0;
     }
 }
+
+
+/* ************ ADMIN SECTION CSS *************/
+
+
+/*****         Chat History Page CSS Start  *****************/
+
+.live-chat-setting-calender-heading .back-arrow-div {
+    margin-right: 20px;
+    display: none;
+}
+
+.live-chat-admin-filter-button {
+    width: 99%;
+    margin: 3px 0px 12px 7px;
+    padding: 16px 30px 0px 30px;
+    background: #FFFFFF;
+    height: 68px;
+}
+
+.live-chat-admin-filter-button .live-chat-admin-history-heading {
+    width: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.live-chat-admin-filter-button .live-chat-admin-history-heading .export-button {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    /* padding: 8px 0px 8px 0px; */
+    border: none;
+    text-align: center;
+    outline: none;
+    font-size: 12px;
+    color: #FFFFFF;
+    width: 95px;
+    height: 35px;
+    background: #0254D7;
+    border-radius: 5px;
+}
+
+.live-chat-admin-filter-button .live-chat-admin-history-heading .export-button img {
+    padding-left: 12px;
+    margin-top: -3px;
+}
+
+.live-chat-admin-filter-button .live-chat-admin-history-heading .filter-button {
+    font-style: normal;
+    font-weight: 500;
+    width: 104px;
+    height: 35px;
+    font-size: 12px;
+    color: #868686;
+    padding: 8px 0px 8px 0px;
+    border: none;
+    text-align: center;
+    outline: none;
+    background: #FFFFFF;
+    border: 1px solid #E6E6E6;
+    box-sizing: border-box;
+    border-radius: 5px;
+    margin-right: 18px;
+}
+
+.live-chat-admin-filter-button .live-chat-admin-history-heading .filter-button img {
+    padding-left: 20px;
+    margin-top: -1px;
+}
+
+.export-chat-popup-heading {
+    width: 100%;
+    border-bottom: 1px solid #E6E6E6;
+    margin-bottom: 10px;
+}
+
+.export-chat-popup-heading h6 {
+    font-weight: 500;
+    font-size: 12px;
+    color: #2D2D2D;
+}
+
+.export-chat-model {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 100;
+    box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.08);
+}
+
+.export-chat-model .form-popup {
+    position: absolute;
+    top: 15%;
+    left: 42%;
+    right: 27%;
+    max-width: 535px;
+    height: 252px;
+    padding: 12px 20px 20px 20px;
+    border-radius: 8px;
+    background-color: white;
+}
+
+.export-chat-model .form-popup .form-container label {
+    font-size: 12px;
+    color: #4D4D4D;
+    font-weight: 500;
+}
+
+.export-chat-model .form-popup .form-container select {
+    width: 100%;
+    height: 34px;
+    background: #FFFFFF;
+    border: 1px solid #E6E6E6;
+    box-sizing: border-box;
+    border-radius: 5px;
+    color: #868686;
+    padding: 0px 0px 2px 10px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: transparent;
+    appearance: none;
+    background-image: url(../img/select-down-arrow.svg);
+    background-repeat: no-repeat;
+    background-position-x: 95%;
+    background-position-y: 13px;
+    outline: none;
+    margin-bottom: 18px;
+    margin-top: 2px;
+}
+
+.export-chat-model .form-popup .form-container .cancelBtn {
+    border: 1px solid #E6E6E6;
+    box-sizing: border-box;
+    border-radius: 5px;
+    background: none;
+    font-weight: 500;
+    font-size: 12px;
+    color: #4D4D4D;
+    outline: none;
+    width: 102px;
+    height: 37px;
+}
+
+.export-chat-model .form-popup .form-container .exportBtn {
+    background: linear-gradient(270deg, #156FFF 0%, #0254D7 100%);
+    border-radius: 5px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 13px;
+    border: 1px solid #0254D7;
+    outline: none;
+    width: 102px;
+    height: 37px;
+    margin-left: 18px;
+    color: #FFFFFF;
+}
+
+.filter-chat-popup-heading {
+    width: 100%;
+    border-bottom: 1px solid #E6E6E6;
+    margin-bottom: 10px;
+}
+
+.filter-chat-popup-heading h6 {
+    font-weight: 500;
+    font-size: 12px;
+    color: #2D2D2D;
+}
+
+.filter-chat-model {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 100;
+    box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.08);
+}
+
+.filter-chat-model .form-popup {
+    position: absolute;
+    top: 15%;
+    left: 42%;
+    right: 27%;
+    max-width: 405px;
+    height: 475px;
+    padding: 11px 12px 20px 12px;
+    border-radius: 8px;
+    background-color: white;
+}
+
+.filter-chat-model .form-popup .form-container label {
+    font-size: 12px;
+    color: #4D4D4D;
+    font-weight: 500;
+}
+
+.filter-chat-model .form-popup .form-container select {
+    width: 100%;
+    height: 36px;
+    background: #FFFFFF;
+    border: 1px solid #E6E6E6;
+    box-sizing: border-box;
+    border-radius: 5px;
+    color: #868686;
+    padding: 0px 0px 2px 10px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: transparent;
+    appearance: none;
+    background-image: url(../img/select-down-arrow.svg);
+    background-repeat: no-repeat;
+    background-position-x: 95%;
+    background-position-y: 13px;
+    outline: none;
+    margin-bottom: 15px;
+    margin-top: -2px;
+}
+
+#startDate,
+#endDate {
+    width: 173px;
+    height: 36px;
+    color: #868686;
+    padding: 0px 8px 2px 10px;
+    border: 1px solid #E6E6E6;
+    border-radius: 5px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: transparent;
+    appearance: none;
+    background-image: url(../img/select-down-arrow.svg);
+    background-repeat: no-repeat;
+    background-position-x: 90%;
+    background-position-y: 13px;
+    outline: none;
+}
+
+#startDate {
+    margin-right: 30px;
+}
+
+#startDate:hover,
+#endDate:hover {
+    border: 1px solid #0254D7;
+    background-image: url(../img/select-down-arrow-color.svg);
+}
+
+#startDate:hover::placeholder,
+#endDate:hover::placeholder {
+    color: #0254D7;
+}
+
+.filter-chat-model .form-popup .form-container .cancelBtn {
+    border: none;
+    box-sizing: border-box;
+    background: none;
+    font-weight: 500;
+    font-size: 12px;
+    color: #4D4D4D;
+    outline: none;
+}
+
+.filter-chat-model .form-popup .form-container .resetBtn {
+    border: 1px solid #0254D7;
+    box-sizing: border-box;
+    border-radius: 5px;
+    background: none;
+    outline: none;
+    font-weight: bold;
+    font-size: 13px;
+    color: #0254D7;
+    width: 92px;
+    height: 37px;
+    margin-left: 15px;
+}
+
+.filter-chat-model .form-popup .form-container .applyfilterBtn {
+    background: linear-gradient(270deg, #156FFF 0%, #0254D7 100%);
+    border-radius: 5px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 13px;
+    border: 1px solid #0254D7;
+    outline: none;
+    width: 128px;
+    height: 37px;
+    margin-left: 15px;
+    color: #FFFFFF;
+}
+
+.live-chat-admin-filter-button .live-chat-admin-history-heading .search-container {
+    float: right;
+    height: 34px;
+    padding: 0px 0px 0px 15px;
+    width: 219px;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.08);
+    border-radius: 5px;
+}
+
+.live-chat-admin-filter-button .live-chat-admin-history-heading .search-container input[type=text] {
+    padding: 7px 0px 0px 6px;
+    margin-top: 0px;
+    border: none;
+    font-weight: 500;
+    font-size: 14px;
+    color: #757575;
+}
+
+.live-chat-admin-filter-button .live-chat-admin-history-heading .search-container input[type=text]:focus {
+    outline: none;
+}
+
+.live-chat-admin-filter-button .live-chat-admin-history-heading .search-container button {
+    float: right;
+    padding: 0px 16px 0px 0px;
+    margin-top: 3px;
+    margin-right: 0px;
+    background: #ffffff;
+    border: none;
+    cursor: pointer;
+    outline: none;
+}
+
+.live-chat-admin-history-table-area {
+    z-index: 0;
+    width: 99%;
+    background: #ffffff;
+    margin: 1px 5px 5px 7px;
+    overflow: hidden;
+    padding: 0px;
+}
+
+.live-chat-admin-history-table-area table {
+    width: 100%;
+    border-collapse: collapse;
+    background-color: #ffffff;
+}
+
+.live-chat-admin-history-table-area table tr {
+    border-bottom: 1px solid #E6E6E6;
+}
+
+.live-chat-admin-history-table-area table tbody tr:hover {
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    background: #FFFFFF;
+}
+
+.live-chat-admin-history-table-area table tr th {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    color: #757575;
+}
+
+.live-chat-admin-history-table-area table tr td {
+    font-weight: 500;
+    font-size: 12px;
+    color: #4D4D4D;
+}
+
+.live-chat-admin-history-table-area table tr:hover button {
+    visibility: visible;
+}
+
+.live-chat-admin-history-table-area table tr td .succes {
+    background: rgba(0, 204, 82, 0.15);
+    border-radius: 30px;
+    width: 38px;
+    height: 22px;
+    text-align: center;
+    padding-top: 2px;
+    margin-left: -7px;
+    color: #00CC52;
+    font-weight: 500;
+    font-size: 12px;
+}
+
+.live-chat-admin-history-table-area table tr td .warning {
+    background: rgba(255, 48, 35, 0.15);
+    border-radius: 30px;
+    width: 38px;
+    height: 22px;
+    text-align: center;
+    padding-top: 2px;
+    margin-left: -7px;
+    color: #FF3023;
+    font-weight: 500;
+    font-size: 12px;
+}
+
+.live-chat-admin-history-table-area table tr td .pending {
+    background: rgba(251, 181, 2, 0.15);
+    border-radius: 30px;
+    width: 38px;
+    height: 22px;
+    text-align: center;
+    padding-top: 2px;
+    margin-left: -7px;
+    color: #FBB502;
+    font-weight: 500;
+    font-size: 12px;
+}
+
+.live-chat-admin-history-table-area table tr td button {
+    border-radius: 5px;
+    font-style: normal;
+    border: 1px solid #0254D7;
+    box-sizing: border-box;
+    font-weight: 500;
+    font-size: 12px;
+    color: #0254D7;
+    outline: none;
+    margin-top: -15px;
+    margin-bottom: -15px;
+    visibility: hidden;
+    float: right;
+    margin-right: 23px;
+    width: 95px;
+    height: 29px;
+    margin-left: -55px;
+    background-color: #ffffff;
+}
+
+.live-chat-admin-history-table-area table td,
+.live-chat-admin-history-table-area table th {
+    padding: 20px 2px 20px 20px;
+    text-align: left;
+}
+
+.live-chat-admin-history-table-area .totalentry {
+    font-size: 13px;
+    margin-top: 56px;
+    color: #4D4D4D;
+    width: 50%;
+    font-weight: 500;
+    padding-left: 18px;
+    display: inline-block;
+}
+
+.live-chat-admin-history-table-area .pagination-div {
+    float: right;
+    margin-top: 52px;
+    margin-right: 10px;
+}
+
+.live-chat-admin-history-table-area .pagination-div .pagination-content {
+    list-style-type: none;
+    display: flex;
+    background: #FFFFFF;
+    border: 1px solid #E6E6E6;
+    box-sizing: border-box;
+    border-radius: 6px;
+}
+
+.live-chat-admin-history-table-area .pagination-content li {
+    border-right: 1px solid #E6E6E6;
+    box-sizing: border-box;
+    padding: 4px 10px 0px 10px;
+    font-size: 13px;
+}
+
+.live-chat-admin-history-table-area .pagination-content li a {
+    color: #717171;
+}
+
+.live-chat-admin-history-table-area .pagination-div .active-page {
+    background: #EAF0FE;
+    opacity: 0.5;
+    border: 1px solid #0254D7;
+    border-radius: 6px 0px 0px 6px;
+}
+
+@media only screen and (max-width: 760px) {
+    .live-chat-admin-history-table-area table,
+    .live-chat-admin-history-table-area thead,
+    .live-chat-admin-history-table-area tbody,
+    .live-chat-admin-history-table-area th,
+    .live-chat-admin-history-table-area td,
+    .live-chat-admin-history-table-area tr {
+        display: block;
+    }
+    .live-chat-admin-history-table-area table tr:nth-of-type(odd) {
+        background: #eee;
+    }
+    .live-chat-admin-history-table-area thead tr {
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
+    }
+    .live-chat-admin-history-table-area tr {
+        border: 1px solid #ccc;
+    }
+    .live-chat-admin-history-table-area td {
+        border: none;
+        border-bottom: 1px solid #eee;
+        position: relative;
+        padding: 5px 0px 5px 50% !important;
+    }
+    .live-chat-admin-history-table-area td:before {
+        position: absolute;
+        top: 6px;
+        left: 6px;
+        width: 45%;
+        padding-right: 10px;
+        white-space: nowrap;
+    }
+    .live-chat-admin-history-table-area td:nth-of-type(1):before {
+        content: "Customer Name";
+    }
+    .live-chat-admin-history-table-area td:nth-of-type(2):before {
+        content: "NPS";
+    }
+    .live-chat-admin-history-table-area td:nth-of-type(3):before {
+        content: "Date";
+    }
+    .live-chat-admin-history-table-area td:nth-of-type(4):before {
+        content: "Duration";
+    }
+    .live-chat-admin-history-table-area td:nth-of-type(5):before {
+        content: "";
+    }
+    .live-chat-admin-history-table-area table tr td button {
+        margin-top: 2px;
+        margin-bottom: 2px;
+        float: none;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .live-chat-admin-filter-button .live-chat-admin-history-heading .search-container {
+        width: 100%;
+    }
+    .live-chat-admin-history-table-area p {
+        font-size: 12px;
+        margin-left: -15px;
+        padding-left: 0px;
+    }
+    .live-chat-admin-history-table-area .pagination-div {
+        margin-right: -15px;
+    }
+    .navbar h2 {
+        display: none;
+    }
+    #live-chat-admin-chat-history {
+        height: calc(100vh - 8.375rem) !important;
+    }
+}
+
+
+/*****         Chat History CSS End  *****************/
