--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ p {
     height: 25px;
     width: 100%;
     background: #FBFCFF;
-    position: relative;
+    position: absolute;
     padding: 2px 15px;
     bottom: 0px;
     margin-top: 10px;
@@ -86,6 +86,10 @@ p {
     border: 1px solid #E6E6E6;
     box-sizing: border-box;
     padding: 0px 8px 8px 6px !important;
+}
+
+textarea {
+    overflow: hidden;
 }
 
 
@@ -510,6 +514,19 @@ div.nav-link {
     color: white;
     border-radius: 16px 0px 16px 16px;
     padding: 10px;
+}
+
+.live-chat-agent-message-bubble-image-attachment {
+    padding: 28px 0px 0px 0px;
+    text-align: center;
+    border: 1px solid var(--border-color-primary);
+    background-color: #ffffff;
+    width: 250px;
+    height: 150px;
+    position: relative;
+    border-radius: 16px 16px 16px 16px;
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
 }
 
 .live-chat-client-message-time,
