--- a/Chatbot theme7/css/style.css
+++ b/Chatbot theme7/css/style.css
@@ -197,26 +197,37 @@ body {
     transition: transform 0.2s ease-out;
 }
 
+.display-bot-div {
+    display: block !important;
+    bottom: 75px;
+}
+
 .wrapper {
     position: fixed;
     max-width: 100%;
     width: 398px;
     height: 85vh;
     overflow: hidden;
-    bottom: 0px;
+    /* bottom: 0px; */
     right: 10px;
     background: #fff;
     border-radius: 5px;
     box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
-    opacity: 0;
+    /* opacity: 0; */
     pointer-events: auto;
     transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    display: none;
+    z-index: 100;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease;
+    animation-duration: 1s !important;
 }
 
-#click:checked~.wrapper {
+
+/* #click:checked~.wrapper {
     opacity: 1;
     bottom: 75px;
-}
+} */
 
 .wrapper .head-text {
     width: 100%;
@@ -1518,17 +1529,23 @@ a.morelink {
 @media screen and (max-width: 767px) {
     .wrapper {
         width: 97.5%;
-        height: 90vh !important;
-        max-height: 90vh;
+        height: 99% !important;
+        max-height: 100%;
         right: 5px;
     }
     .bot-opener {
         right: 15px;
         bottom: 8px;
     }
-    #click:checked~.wrapper {
+    /* #click:checked~.wrapper {
         opacity: 1;
         bottom: 62px;
+    } */
+    .display-bot-div {
+        bottom: 2px;
+    }
+    .header-v2-top-right {
+        display: block;
     }
 }
 
