--- a/css/style.css
+++ b/css/style.css
@@ -1210,15 +1210,6 @@ div.nav-link {
     .arange {
         padding-right: 0px !important;
     }
-    /* .live-chat-setting-profile-heading {
-        padding: 25px 0px 25px 28px;
-    } */
-    /* .live-chat-profile-area .second-ele {
-        margin-left: 10px;
-    } */
-    /* .live-chat-profile-area {
-        padding-right: 0px;
-    } */
 }
 
 @media only screen and (max-width: 769px) {
@@ -1364,7 +1355,7 @@ div.nav-link {
 }
 
 .live-chat-setting-calender-heading img {
-    margin-top: 4px;
+    margin-top: 2px;
     margin-bottom: 4px;
 }
 
@@ -1724,7 +1715,7 @@ div.nav-link {
 }
 
 .live-chat-setting-canned-response-heading img {
-    margin-top: 4px;
+    margin-top: 2px;
     margin-bottom: 4px;
 }
 
@@ -2211,7 +2202,7 @@ div.nav-link {
 .live-chat-general-setting-area .checkbox-content input {
     height: 18px;
     width: 18px;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-left: 20px;
 }
 
@@ -2243,6 +2234,7 @@ div.nav-link {
     }
     .live-chat-general-setting-area .checkbox-content input {
         margin-left: 30px;
+        margin-top: 10px;
     }
     .live-chat-general-setting-heading .back-arrow-div {
         margin-right: 10px;
@@ -2270,9 +2262,6 @@ div.nav-link {
     .live-chat-general-setting-heading img {
         margin-top: -5px;
         height: 19px;
-    }
-    .live-chat-profile-area .first-ele .user-image-section {
-        /* margin-left: 105px; */
     }
     .live-chat-general-setting-area {
         height: 100%;
@@ -2410,7 +2399,7 @@ div.nav-link {
 }
 
 .live-chat-setting-archived-heading img {
-    margin-top: 4px;
+    margin-top: 2px;
     margin-bottom: 4px;
 }
 
@@ -2806,12 +2795,10 @@ div.nav-link {
     }
     .live-chat-client-message-wrapper {
         width: 95%;
-        /* height: 50px; */
         margin: 10% 0 10% 1%;
     }
     .live-chat-agent-message-wrapper {
         width: 95%;
-        /* height: 50px; */
         margin: 10% 0 10% 4%;
     }
     .live-chat-client-message-time,
@@ -2868,9 +2855,6 @@ div.nav-link {
     }
     .live-chat-text-format-panel {
         grid-template-columns: 60px 70px 1fr;
-    }
-    .live-chat-text-format-icons {
-        /* min-width: 90%; */
     }
     .live-chat-text-format-icon {
         width: 18px;
@@ -3032,7 +3016,6 @@ div.nav-link {
         position: absolute;
         background-color: #ffffff;
         bottom: 0px;
-        /* z-index: 1; */
         top: 4.4rem;
     }
     .live-chat-unread-message-count::after {
@@ -3046,18 +3029,10 @@ div.nav-link {
     .live-chat-text-box-wrapper {
         width: 100%;
         border: none;
-        /* height: 9%; */
         bottom: 2px;
-        /* height: 76px; */
         position: fixed;
         margin-left: -16px !important;
         border-top: 1px solid var(--border-color-primary);
-        /* border-radius: 50px;
-    }
-    .live-chat-text-box {
-        /* border: none;
-        padding: 15px 10px 10px 10px;
-        height: 55px; */
     }
     .live-chat-text-area {
         font-size: 18px;
@@ -3073,16 +3048,7 @@ div.nav-link {
     .live-chat-private {
         display: none;
     }
-    .live-chat-text-format-icons {
-        /* display: grid;
-        grid-template-rows: 1fr;
-        grid-template-columns: repeat(11, minmax(min-content, 1fr));
-        align-items: center;
-        justify-items: center;
-        width: 100%;
-        max-width: 100%;
-        min-width: 100%; */
-    }
+    .live-chat-text-format-icons {}
     .live-chat-text-format-icon-wrapper.private-note {
         width: 30px;
         height: 30px;
@@ -3195,35 +3161,15 @@ div.nav-link {
         border: none;
         overflow: scroll;
     }
-    /* .live-chat-mobile-display.mobile-menu-dots {
-        display: block;
-        margin-left: 25%;
-        cursor: pointer;
-    } */
-    /* .live-chat-customer-contact-details,
-    .live-chat-date-time,
-    .live-chat-active-agent {
-        padding: 5% 0;
-    } */
     .live-chat-email-label,
     .live-chat-active-agent-name-label,
     .live-chat-initiation-time-label {
         margin-bottom: 2%;
     }
-    .live-chat-phone-label,
-    .live-chat-previous-agent-name-label {
-        /* margin: 10% 0 2% 0; */
-    }
     .live-chat-initiation-date-label,
     .live-chat-category-label {
         margin: 7% 0 2% 0;
     }
-    /* .live-chat-client-message-wrapper {
-        margin: 12% 0 15% 1%;
-    } */
-    /* .live-chat-agent-message-wrapper {
-        margin: 15% 0 15% 3%;
-    } */
 }
 
 @media only screen and (max-width: 320px) {
@@ -3240,9 +3186,6 @@ div.nav-link {
     #sidebarlink {
         padding-left: 13px;
     }
-    /* a.nav-link {
-        margin-left: 40px;
-    } */
     div.nav-link {
         margin-left: 27px;
     }
@@ -3363,7 +3306,6 @@ div.nav-link {
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
-    /* padding: 8px 0px 8px 0px; */
     border: none;
     text-align: center;
     outline: none;
@@ -3517,7 +3459,7 @@ div.nav-link {
 }
 
 .live-chat-admin-filter-button .live-chat-admin-history-heading .search-container input[type=text] {
-    padding: 7px 0px 0px 6px;
+    padding: 7px 0px 0px 0px;
     margin-top: 0px;
     border: none;
     font-weight: 500;
@@ -3789,6 +3731,250 @@ div.nav-link {
 /*****         Chat History CSS End  *****************/
 
 
+/******* livechat admin css start ***************/
+
+.live-chat-admin-self-buttons {
+    width: 99%;
+    margin: 3px 0px 12px 7px;
+    padding: 16px 30px 0px 30px;
+    background: #FFFFFF;
+    height: 68px;
+}
+
+.live-chat-admin-self-buttons .live-chat-admin-self-heading {
+    width: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.live-chat-admin-self-buttons .live-chat-admin-self-heading .create-new-user-button {
+    font-style: normal;
+    font-weight: 500;
+    width: 116px;
+    height: 35px;
+    font-size: 12px;
+    padding: 8px 0px 8px 0px;
+    border: none;
+    text-align: center;
+    outline: none;
+    background: linear-gradient( 90deg, #0254D7 0%, #0062FF 100%);
+    box-sizing: border-box;
+    border-radius: 5px;
+    margin-right: 16px;
+    color: #FFFFFF;
+}
+
+.live-chat-admin-self-buttons .live-chat-admin-self-heading .upload-excel-button {
+    font-style: normal;
+    font-weight: 500;
+    border: 1px solid #0254D7;
+    text-align: center;
+    outline: none;
+    font-size: 12px;
+    width: 106px;
+    height: 35px;
+    background: #FFFFFF;
+    border-radius: 5px;
+    font-weight: 500;
+    font-size: 12px;
+    color: #0254D7;
+}
+
+#livechat-admin-self-upload-excel-Modal .download-template-Btn {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    color: #0254D7;
+    padding-top: 3px;
+    border: none;
+    outline: none;
+    position: absolute;
+    left: 15px;
+    background: none;
+}
+
+#startDate,
+#endDate {
+    color: #868686;
+    padding: 0px 8px 2px 10px;
+    border: 1px solid #E6E6E6;
+    border-radius: 5px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: transparent;
+    appearance: none;
+    background-image: url(../img/select-down-arrow.svg);
+    background-repeat: no-repeat;
+    background-position-x: 90%;
+    background-position-y: 13px;
+    outline: none;
+}
+
+#startDate:hover,
+#endDate:hover {
+    border: 1px solid #0254D7;
+    background-image: url(../img/select-down-arrow-color.svg);
+}
+
+#startDate:hover::placeholder,
+#endDate:hover::placeholder {
+    color: #0254D7;
+}
+
+.live-chat-admin-self-buttons .live-chat-admin-self-heading .search-container {
+    float: right;
+    height: 34px;
+    padding: 0px 0px 0px 15px;
+    width: 219px;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.08);
+    border-radius: 5px;
+}
+
+.live-chat-admin-self-buttons .live-chat-admin-self-heading .search-container input[type=text] {
+    padding: 7px 0px 0px 2px;
+    margin-top: 0px;
+    border: none;
+    font-weight: 500;
+    font-size: 14px;
+    color: #757575;
+}
+
+.live-chat-admin-self-buttons .live-chat-admin-self-heading .search-container input[type=text]:focus {
+    outline: none;
+}
+
+.live-chat-admin-self-buttons .live-chat-admin-self-heading .search-container button {
+    float: right;
+    padding: 0px 16px 0px 0px;
+    margin-top: 3px;
+    margin-right: 0px;
+    background: #ffffff;
+    border: none;
+    cursor: pointer;
+    outline: none;
+}
+
+.live-chat-admin-self-table-area {
+    z-index: 0;
+    width: 99%;
+    background: #ffffff;
+    margin: 1px 5px 5px 7px;
+    overflow: hidden;
+    height: 100%;
+    padding: 0px;
+}
+
+.live-chat-admin-self-table-area table {
+    width: 100%;
+    border-collapse: collapse;
+    background-color: #ffffff;
+}
+
+.live-chat-admin-self-table-area table tr {
+    border-bottom: 1px solid #E6E6E6;
+}
+
+.live-chat-admin-self-table-area table .show-on-hover {
+    text-align: right;
+    padding-right: 30px;
+}
+
+.live-chat-admin-self-table-area table .show-on-hover img {
+    visibility: hidden;
+    cursor: pointer;
+}
+
+.live-chat-admin-self-table-area table tr:hover .show-on-hover img {
+    visibility: visible;
+}
+
+.live-chat-admin-self-table-area table tbody tr:hover {
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    background: #FFFFFF;
+}
+
+.live-chat-admin-self-table-area table tr th {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    color: #757575;
+}
+
+.live-chat-admin-self-table-area table tr td {
+    font-weight: 500;
+    font-size: 12px;
+    color: #4D4D4D;
+}
+
+.live-chat-admin-self-table-area table td,
+.live-chat-admin-self-table-area table th {
+    padding: 20px 2px 20px 20px;
+    text-align: left;
+    padding-left: 8.5rem;
+}
+
+.live-chat-admin-self-table-area .totalentry {
+    font-size: 13px;
+    margin-top: 56px;
+    color: #4D4D4D;
+    width: 50%;
+    font-weight: 500;
+    padding-left: 18px;
+    display: inline-block;
+}
+
+.live-chat-admin-self-table-area .pagination-div {
+    float: right;
+    margin-top: 52px;
+    margin-right: 10px;
+}
+
+.live-chat-admin-self-table-area .pagination-div .pagination-content {
+    list-style-type: none;
+    display: flex;
+    background: #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 6px;
+}
+
+.live-chat-admin-self-table-area .pagination-content li {
+    border-right: 1px solid #E6E6E6;
+    box-sizing: border-box;
+    padding: 3px 10px 1px 10px;
+    font-size: 13px;
+    height: 26px;
+    border-top: 1px solid #E6E6E6;
+    border-bottom: 1px solid #E6E6E6;
+}
+
+.live-chat-admin-self-table-area .pagination-content li a {
+    color: #717171;
+    text-decoration: none;
+}
+
+.live-chat-admin-self-table-area .pagination-div .active-page {
+    background: #EAF0FE;
+    opacity: 0.5;
+    border: 1px solid #0254D7;
+    border-radius: 6px 0px 0px 6px;
+}
+
+@media screen and (max-width: 1024px) {
+    .live-chat-admin-self-table-area table td,
+    .live-chat-admin-self-table-area table th {
+        padding: 20px 2px 20px 20px;
+        text-align: left;
+        padding-left: 20px !important;
+    }
+}
+
+
+/*****        livechat admin Page CSS end  *****************/
+
+
 /*****         Manage Users Page CSS Start  *****************/
 
 .live-chat-setting-calender-heading .back-arrow-div {
@@ -4057,7 +4243,7 @@ div.nav-link {
 }
 
 .live-chat-admin-user-status-field .live-chat-admin-manage-user-heading .search-container input[type=text] {
-    padding: 7px 0px 0px 6px;
+    padding: 7px 0px 0px 0px;
     margin-top: 0px;
     border: none;
     font-weight: 500;
@@ -4857,7 +5043,7 @@ div.nav-link {
 }
 
 #admin-gsetting-grey-icon {
-    display: none;
+    /* display: none; */
 }
 
 #admin-blacklist-blue-icon {
@@ -4865,7 +5051,7 @@ div.nav-link {
 }
 
 #admin-g-setting-color-change {
-    color: #0254D7;
+    /* color: #0254D7; */
 }
 
 .live-chat-admin-general-setting-heading {
@@ -5400,3 +5586,266 @@ div.nav-link {
 .holidays-content {
     display: none;
 }
+
+#live-chat-admin-setting-content-gs {
+    display: none;
+}
+
+
+/* Developer-setting page css START*/
+
+#admin-dev-setting-color-change {
+    color: #0254D7 !important;
+}
+
+.live-chat-calender-area .select-tag select {
+    width: 100%;
+    height: 35px;
+    color: #868686;
+    padding: 0px 8px 2px 10px;
+    border: 1px solid #E6E6E6;
+    border-radius: 5px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: transparent;
+    appearance: none;
+    background-image: url(../img/select-down-arrow.svg);
+    background-repeat: no-repeat;
+    background-position-x: 95%;
+    background-position-y: 13px;
+    outline: none;
+}
+
+.live-chat-calender-area .select-tag select:hover {
+    color: #0254D7;
+    border: 1px solid #0254D7;
+    background-image: url(../img/select-down-arrow-color.svg);
+}
+
+.live-chat-calender-area .go-button a {
+    width: 79px;
+    height: 34px;
+    background: linear-gradient(180deg, #0254D7 0%, #0062FF 100%);
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    font-weight: normal;
+    font-size: 12px;
+    justify-content: center;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+.live-chat-calender-area .go-button a svg {
+    margin-left: 5px;
+}
+
+.p-l {
+    padding-left: 0px;
+}
+
+.p-r {
+    padding-right: 0px;
+}
+
+.save-processor-input input {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid #E6E6E6;
+    outline: none;
+    height: 35px;
+    width: 100%;
+    font-weight: normal;
+    font-size: 12px;
+    color: #909090;
+    padding: 0px 10px;
+}
+
+.save-processor-input input:focus {
+    border: 1px solid #E6E6E6;
+    border-radius: 20px;
+}
+
+.save-processor-input input::placeholder {
+    font-weight: normal;
+    font-size: 12px;
+    color: #909090;
+}
+
+.save-processor-btn {
+    width: 143px;
+    height: 35px;
+    font-weight: normal;
+    font-size: 14px;
+    text-align: center;
+    color: #FFFFFF;
+    background: linear-gradient(180deg, #0254D7 0%, #0062FF 100%);
+    border-radius: 5px;
+    border: none;
+    outline: none !important;
+}
+
+.accordian-heading {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    color: #4D4D4D;
+    margin-bottom: 10px;
+}
+
+.accordian-content-div {
+    width: 100%;
+    border: 1px solid #F4F4F4;
+    box-sizing: border-box;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 40px;
+}
+
+.accordian-div-inside-text {
+    font-weight: normal;
+    font-size: 12px;
+    color: #0254D7;
+    word-break: break-word;
+    margin-bottom: 25px;
+}
+
+.accordian-content-div .card a {
+    padding-left: 10px !important;
+}
+
+.accordian-content-div .card a h6 {
+    font-weight: normal !important;
+    font-size: 12px;
+    color: #0254D7 !important;
+}
+
+.card-body {
+    padding: 8px;
+    font-weight: normal !important;
+    font-size: 12px;
+    color: #0254D7 !important;
+}
+
+.card .card-header[data-toggle=collapse].collapsed::after {
+    content: '\f067';
+}
+
+.card .card-header[data-toggle=collapse]::after {
+    right: -14px;
+    color: #757575;
+    content: '\f068';
+    top: -3px;
+}
+
+@media only screen and (max-width: 768px) {
+    .editor-accodian-div {
+        flex-direction: column;
+    }
+    .accordian-container {
+        margin-top: 0px !important;
+    }
+    .save-processor-btn {
+        width: 115px;
+    }
+}
+
+
+/* Developer-setting page css END*/
+
+
+/* Stop-timer CSS Start*/
+
+.stop-timer-div {
+    position: absolute;
+    width: 280px;
+    height: 200px;
+    right: 20px;
+    bottom: 95px;
+    background: #FFFFFF;
+    border: 1px solid #E6E6E6;
+    box-sizing: border-box;
+    border-radius: 5px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 14px;
+}
+
+.stop-timer-div p {
+    font-weight: normal;
+    font-size: 13px;
+    color: #909090;
+    line-height: 1.1;
+    margin-bottom: 10px;
+}
+
+.stop-timer-div .stop-timer-btn {
+    width: 118px;
+    height: 35px;
+    background: #FFFFFF;
+    border: 1px solid #0254D7;
+    box-sizing: border-box;
+    border-radius: 5px;
+    outline: none;
+    font-weight: 600;
+    font-size: 14px;
+    color: #0254D7;
+}
+
+#countdown-container {
+    display: inline-block;
+    width: 135px;
+    height: 45px;
+    margin: 10px 0;
+    background: linear-gradient(180deg, #0254D7 0%, #0062FF 100%);
+    border-radius: 5px
+}
+
+#countdown {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 4px;
+    color: #fff;
+}
+
+#countdown span {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #FFFFFF;
+    padding: 0px 12px 0px 8px;
+}
+
+#countdown-text {
+    margin-top: -8px;
+}
+
+#countdown-text span {
+    font-weight: normal;
+    font-size: 8px;
+    color: #FFFFFF;
+}
+
+#draggable {
+    z-index: 100;
+}
+
+@media only screen and (max-width: 1024px) {
+    .stop-timer-div {
+        width: 200px !important;
+        right: 15px !important;
+    }
+}
+
+
+/* Stop-timer CSS End*/
